--- a/src/components/alg/alg-conspect/sp/pages/elem-sp14.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp14.html
@@ -5,7 +5,7 @@
 
 
 <article class="article">
-  <h1>Занятие 13. Структуры данных #2. set, map</h1>
+  <h1>Занятие 14. Структуры данных #2. set, map</h1>
   <p>Конспект видео от 2024.12.14</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/573635" target="_blank">Codeforces Контест 573635</a></p>
 </article>
@@ -43,6 +43,61 @@
 <article class="article">
   <div class="anchor" id="p1"></div>
   <h3>Структуры данных #2. set, map</h3>
+
+  <p><strong>Ассоциативные контейнеры (associative containers)</strong> представляют такие  контейнеры, где с каждым элементом ассоциирован некоторый ключ, и этот  ключ применяется для доступа к элементу в контейнере.</p>
+
+  <p>В С++ ассоциативные контейнеры представлены множествами (set) и картами/словарями (map). Также существуют и multi-версии этих контейнеров, в которых допускаются повторы ключей. Эти структуры данных основаны на сбалансированных деревьях поиска.</p>
+
+  <p>Новые библиотеки:</p>
+  <code>#include &lt;set&gt;</code>
+  <code>#include &lt;map&gt;</code>
+
+  <h4>set</h4>
+  <p>set - это контейнер, который автоматически сортирует добавляемые элементы в порядке возрастания. Но при добавлении одинаковых значений, set будет хранить только один его экземпляр. По другому его еще называют множеством.</p>
+  <p>Два свойства set:</p>
+  <ol>
+    <li>Все элементы уникальны. Нет повторяющихся.</li>
+    <li>Все элементы упорядочены по возрастанию.</li>
+  </ol>
+  <p>set&lt;тип данных&gt; имя;</p>
+<pre>
+set&lt;int&gt; st;
+st.insert(10);
+int tmp = *st.begin();
+</pre>
+  <p>Пример:</p>
+  <code>1 2 3 4 1 2 9 7 12</code>
+  <p>В set:</p>
+  <code>1 2 3 4 7 9 12</code>
+
+  <ol>
+    <li>.empty() Проверяет, является ли set пустым. true/false</li>
+    <li>.size() Возвращает количество элементов в set.</li>
+    <li>.begin() Возвращает итератор на первый элемент.</li>
+    <li>.end() Возвращает итератор за последним элементом.</li>
+    <li>.rbegin() Возвращает итератор на последний элемент.</li>
+    <li>.rend() Возвращает итератор перед первым элементом.</li>
+    <li>.find(key) Возвращает итератор на элемент равный key. Если элемента нет возвращает итератор равный .end().</li>
+    <li>.insert(a) Добавляет элемент a в set.</li>
+    <li>.erase(a) Удаляет элемент из set по значению равному a. Перед удалением следует проверить, что элемент существует в set.</li>
+    <li>.erase(iter) Удаляет элемент из set по итератору iter.</li>
+    <li>.lower_bound(a) Возвращает итератор на первый элемент больший либо равный a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+    <li>.upper_bound(a) Возвращает итератор на первый элемент больший a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+  </ol>
+
+  <p>Решение задачи экзамен по истории</p>
+<pre>
+
+</pre>
+
+
+
+
+
+
+
+
+
 
 </article>
 
