--- a/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
@@ -213,7 +213,7 @@ getline(cin, str2, ':');
   <p>Обратите внимание, что в капитализации все буквы слова кроме первой остаются не измененными.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано непустое слово. Слово состоит из строчных и прописных букв латинского алфавита. Длина заданного слова не превосходит 10<sup>3</sup> букв.</p>
+  <p>В первой строке записано непустое слово. Слово состоит из строчных и прописных букв латинского алфавита. Длина заданного слова не превосходит 10³ букв.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите капитализацию слова.</p>
@@ -240,7 +240,7 @@ getline(cin, str2, ':');
 
   <p>Реверсом строки, называется строка которая получается при чтении исходной строки справа налево.</p>
 
-  <p>Более формально, если S=s<sub>1</sub>s<sub>2</sub>...s<sub>n-1</sub>s<sub>n</sub>, то ее реверс это строка s<sub>n</sub>s<sub>n-1</sub>...s<sub>2</sub>s<sub>1</sub></p>
+  <p>Более формально, если S=s₁s₂...sₙ, то ее реверс это строка sₙsₙ₋₁...s₂s₁</p>
   <p>Просьба, в учебных целях, составьте строку в которой лежит реверс исходной и выведите его на экран, а не просто вывести строку справа налево с помощью цикла</p>
 
   <h4>Входные данные</h4>
@@ -338,8 +338,7 @@ p43s
   <p>Вводятся 2 строки S и T.</p>
 
   <h4>Выходные данные</h4>
-  <p>Выведите единственное число — число вхождений строки T
-  в строку S.</p>
+  <p>Выведите единственное число — число вхождений строки T в строку S.</p>
 
   <h4>Пример 1</h4>
 <pre>
@@ -474,16 +473,16 @@ TheQuickBrownFoxJumpsOverTheLazyDog
 
   <p>Вам даны два массива a и b, оба состоят из n положительных (больших нуля) целых чисел. Также вам задано число k.</p>
 
-  <p>За один ход вы можете выбрать два индекса i и j (1≤i,j≤n) и поменять местами a<sub>i</sub> и b<sub>j</sub> (i.e. a<sub>i</sub> становится b<sub>j</sub> и наоборот). Заметьте, что i и j могут совпадать или отличаться (в частности, обмен a<sub>2</sub> с b<sub>2</sub> или обмен a<sub>3</sub> с b<sub>9</sub> оба считаются приемлемыми ходами).</p>
+  <p>За один ход вы можете выбрать два индекса i и j (1 ≤ i,j ≤ n) и поменять местами a<sub>i</sub> и b<sub>j</sub> (i.e. a<sub>i</sub> становится b<sub>j</sub> и наоборот). Заметьте, что i и j могут совпадать или отличаться (в частности, обмен a₂ с b₂ или обмен a₃ с b₉ оба считаются приемлемыми ходами).</p>
 
   <p>Ваша задача — назвать максимальную возможную сумму, которую вы можете получить в массиве a, если вы сделаете не более k таких ходов (обменов).</p>
 
   <p>Вам нужно ответить на t независимых наборов тестовых данных.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка теста содержит одно целое число t (1≤t≤200) — количество наборов тестовых данных. Затем следуют t наборов тестовых данных.</p>
+  <p>Первая строка теста содержит одно целое число t (1 ≤ t ≤ 200) — количество наборов тестовых данных. Затем следуют t наборов тестовых данных.</p>
 
-  <p>Первая строка набора тестовых данных содержит два целых числа n и k (1≤n≤30;0≤k≤n) — количество элементов в a и b и максимальное количество ходов, которое вы можете сделать. Вторая строка набора тестовых данных содержит n целых чисел a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub>(1≤a<sub>i</sub>≤30), где a<sub>i</sub> — это i-й элемент в a. Третья строка набора тестовых данных содержит n целых чисел b<sub>1</sub>,b<sub>2</sub>,…,b<sub>n</sub> (1≤b<sub>i</sub>≤30), где b<sub>i</sub> — это i-й элемент в b.</p>
+  <p>Первая строка набора тестовых данных содержит два целых числа n и k (1 ≤ n ≤ 30;0 ≤ k ≤ n) — количество элементов в a и b и максимальное количество ходов, которое вы можете сделать. Вторая строка набора тестовых данных содержит n целых чисел a₁, a₂, ... , aₙ (1 ≤ aᵢ ≤ 30), где aᵢ — это i-й элемент в a. Третья строка набора тестовых данных содержит n целых чисел b₁, b₂, ... , bₙ (1 ≤ bᵢ ≤ 30), где bᵢ — это i-й элемент в b.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите ответ на него — максимальную возможную сумму, которую вы можете получить в массиве a, если вы можете совершить не более k обменов.</p>
@@ -514,9 +513,9 @@ TheQuickBrownFoxJumpsOverTheLazyDog
 11
 17
 </pre>
-  <p>В первом наборе тестовых данных примера вы можете поменять местами a<sub>1</sub>=1 и b<sub>2</sub>=4 и тогда получите a=[4,2] и b=[3,1].</p>
+  <p>В первом наборе тестовых данных примера вы можете поменять местами a₁=1 и b₂=4 и тогда получите a=[4,2] и b=[3,1].</p>
   <p>Во втором наборе тестовых данных примера вам не нужно ничего менять.</p>
-  <p>В третьем наборе тестовых данных примера вы можете поменять местами a<sub>1</sub>=1 и b<sub>1</sub>=10, a<sub>3</sub>=3 и b<sub>3</sub>=10 и a<sub>2</sub>=2 и b<sub>4</sub>=10, и получить a=[10,10,10,4,5] и b=[1,9,3,2,9].</p>
+  <p>В третьем наборе тестовых данных примера вы можете поменять местами a₁=1 и b₁=10, a₃=3 и b₃=10 и a₂=2 и b₄=10, и получить a=[10,10,10,4,5] и b=[1,9,3,2,9].</p>
   <p>В четвертом наборе тестовых данных примера вы не можете ничего поменять.</p>
   <p>В пятом наборе тестовых данных примера вы можете поменять местами массивы a и b и получить a=[4,4,5,4] и b=[1,2,2,1].</p>
 </article>
@@ -623,9 +622,9 @@ int main() {
   <p>Например, предположим, что s=«cbabc». Вставив 'a', можно получить «acbabc», «cababc», «cbaabc», «cbabac», или «cbabca». Строка «cbaabc» — палиндром, и не подходит, поэтому вы должны вывести другую из вышеперечисленных строк.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержится одно целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных.</p>
+  <p>В первой строке содержится одно целое число t (1 ≤ t ≤ 10⁴) — количество наборов входных данных.</p>
   <p>Единственная строка каждого набора входных данных содержит строку s, состоящую из строчных английских букв.</p>
-  <p>Суммарная длина всех строк не превышает 3⋅10<sup>5</sup>.</p>
+  <p>Суммарная длина всех строк не превышает 3⋅10⁵.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, если нет решения, выведите «NO».</p>
@@ -677,7 +676,7 @@ nutforajarofatuna
   <p>Вам дана строка s. Проверьте, можно ли разбить ее на две непустые непересекающиеся подпоследовательности, так что строки, соответствующие этим подпоследовательностям, будут няшными. Здесь под подпоследовательностью понимается произвольный набор индексов строки.</p>
 
   <h4>Входные данные</h4>
-  <p>В единственной строке задана строка s (1 ≤ |s| ≤ 10<sup>5</sup>). Гарантируется, что она состоит только из маленьких латинских букв.</p>
+  <p>В единственной строке задана строка s (1 ≤ |s| ≤ 10⁵). Гарантируется, что она состоит только из маленьких латинских букв.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите «Yes», если строку можно разбить на две няшные строки (в контексте подпоследовательностей), и «No» в противном случае.</p>
@@ -771,7 +770,7 @@ xxx
   <p>Определите, может ли Андрей нарисовать подпись врача на пустом листе бумаги n*m.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке даны 2 целых числа n и m (3≤n,m≤1000).</p>
+  <p>В первой строке даны 2 целых числа n и m (3 ≤ n, m ≤ 1000).</p>
   <p>Далее следуют n строк по m символов в каждой. Каждый из символов — либо «.», обозначающий пустую клетку, либо «#», обозначающий клетку с чернилами.</p>
 
   <h4>Выходные данные</h4>
@@ -901,7 +900,7 @@ int main() {
   <p>Паша и Маша хотят сами научиться делать чудесную раскраску строки. Поскольку они очень маленькие, им нужна помощь в виде подсказки. Помогите им найти k — количество красных (или зелёных, эти числа равны) букв в чудесной раскраске строки.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано одно целое число t (1≤t≤1000) — количество наборов входных данных. Далее следуют t наборов входных данных.</p>
+  <p>В первой строке записано одно целое число t (1 ≤ t ≤ 1000) — количество наборов входных данных. Далее следуют t наборов входных данных.</p>
   <p>Каждый набор входных данных состоит из одной непустой строки s, состоящей из строчных букв латинского алфавита. Количество символов в строке не превышает 50.</p>
 
   <h4>Выходные данные</h4>
@@ -950,11 +949,11 @@ xxxxxx
   <p>Вам дан список из n слов. Выберите из этого списка максимальное количество слов так, чтобы они образовывали интересный рассказ. Если невозможно составить непустой интересный рассказ, выведите 0.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано одно целое число t (1≤t≤5000) — количество наборов входных данных. Далее следуют t наборов входных данных.</p>
+  <p>В первой строке записано одно целое число t (1 ≤ t ≤ 5000) — количество наборов входных данных. Далее следуют t наборов входных данных.</p>
 
-  <p>Первая строка каждого набора данных содержит целое число n (1≤n≤2⋅10<sup>5</sup>) — количество слов. Далее следует n непустых строк — слов, состоящих из строчных букв латинского алфавита. Слова в списке не обязательно различны (иными словами, могут быть одинаковые слова). Слова состоят исключительно из букв 'a', 'b', 'c', 'd' и 'e'.</p>
+  <p>Первая строка каждого набора данных содержит целое число n (1 ≤ n ≤ 2⋅10⁵) — количество слов. Далее следует n непустых строк — слов, состоящих из строчных букв латинского алфавита. Слова в списке не обязательно различны (иными словами, могут быть одинаковые слова). Слова состоят исключительно из букв 'a', 'b', 'c', 'd' и 'e'.</p>
 
-  <p>Гарантируется, что сумма n по всем наборам входных данных не превышает 2⋅10<sup>5</sup> и что суммарное количество букв во всех словах, содержащихся в наборах входных данных, не превышает 4⋅10<sup>5</sup>.</p>
+  <p>Гарантируется, что сумма n по всем наборам входных данных не превышает 2⋅10⁵ и что суммарное количество букв во всех словах, содержащихся в наборах входных данных, не превышает 4⋅10⁵.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальное количество слов из заданного списка, которые могут образовать интересный рассказ. Если невозможно составить непустой интересный рассказ, выведите 0.</p>
@@ -1012,7 +1011,7 @@ ca
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Вам даны n слов одинаковой длины m, состоящие из строчных букв латинского алфавита, i-е слово обозначается s<sub>i</sub>.</p>
+  <p>Вам даны n слов одинаковой длины m, состоящие из строчных букв латинского алфавита, i-е слово обозначается sᵢ.</p>
 
   <p>За один ход вы можете выбрать любую позицию в любом отдельном слове и заменить букву в этой позиции на предыдущую или следующую букву в алфавитном порядке. Например:</p>
   <ul>
@@ -1021,7 +1020,7 @@ ca
     <li>'z' может быть заменена только на 'y'.</li>
   </ul>
   <p>Разница между двумя словами — это минимальное число ходов, необходимое для того, чтобы сделать их равными. Например, разница между «best» и «cost» составляет 1+10+0+0=11.</p>
-  <p>Найдите минимальную разницу между s<sub>i</sub> и s<sub>j</sub> такую, что (i&lt;j). Другими словами, найдите минимальную разницу по всем возможным парам из n
+  <p>Найдите минимальную разницу между sᵢ и s<sub>j</sub> такую, что (i &lt; j). Другими словами, найдите минимальную разницу по всем возможным парам из n
   слов.</p>
 
   <h4>Входные данные</h4>
@@ -1089,11 +1088,11 @@ y
   <p>Например, у Дмитрия есть строка «aaabcc». Вы можете получить следующие различные строки: «abcc»(при удалении первых двух или второго и третьего символов), «aacc»(при удалении третьего и четвёртого символов),«aaac»(при удалении четвертого и пятого символов) и «aaab»(при удалении последних двух).</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка входных данных содержит одно целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных.</p>
+  <p>Первая строка входных данных содержит одно целое число t (1 ≤ t ≤ 10⁴) — количество наборов входных данных.</p>
   <p>Далее следуют описания входных данных.</p>
-  <p>Первая строка описания каждого набора входных данных содержит целое число n (3≤n≤2⋅10<sup>5</sup>).</p>
+  <p>Первая строка описания каждого набора входных данных содержит целое число n (3 ≤ n ≤ 2⋅10⁵).</p>
   <p>Вторая строка описания каждого набора входных данных содержит строку s длины n, состоящую из строчных латинских букв.</p>
-  <p>Гарантируется, что сумма n по всем наборам входных данных не превосходит 2⋅10<sup>5</sup>.</p>
+  <p>Гарантируется, что сумма n по всем наборам входных данных не превосходит 2⋅10⁵.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — количество различных строк, которые можно получить, удалив две подряд идущие буквы.</p>
