--- a/src/components/code/code-ref/pages/elem-unicode.html
+++ b/src/components/code/code-ref/pages/elem-unicode.html
@@ -214,6 +214,10 @@
     <div class="copy-to-clipboard">&#x2261;</div>
     <div class="copy-to-clipboard">&#x2264;</div>
     <div class="copy-to-clipboard">&#x2265;</div>
+    <div class="copy-to-clipboard">&#x2190;</div>
+    <div class="copy-to-clipboard">&#x2191;</div>
+    <div class="copy-to-clipboard">&#x2192;</div>
+    <div class="copy-to-clipboard">&#x2193;</div>
 </div>
 
   <details>
@@ -252,6 +256,10 @@
 <pre>&#x2261;  &#9; &amp;#x2261;  &#9; Identical To</pre>
 <pre>&le;      &#9; &amp;#x2264;  &#9; &amp;le;</pre>
 <pre>&ge;      &#9; &amp;#x2265;  &#9; &amp;ge;</pre>
+<pre>&#x2308;  &#9; &amp;#x2308;  &#9; &amp;lceil;  &#9; Left Ceiling</pre>
+<pre>&#x2309;  &#9; &amp;#x2309;  &#9; &amp;rceil;  &#9; Right Ceiling</pre>
+<pre>&#x230A;  &#9; &amp;#x230A;  &#9; &amp;lfloor; &#9; Left Floor</pre>
+<pre>&#x230B;  &#9; &amp;#x230B;  &#9; &amp;rfloor; &#9; Right Floor</pre>
 <pre>&#x2500;  &#9; &amp;#x2500;  &#9; Box Drawings Light Horizontal</pre>
 <pre>&#x2502;  &#9; &amp;#x2502;  &#9; Box Drawings Light Vertical</pre>
 <pre>&#x250C;  &#9; &amp;#x250C;  &#9; Box Drawings Light Down and Right</pre>
