--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -37,5 +37,6 @@
   <p><a href="lec-11.html" class="js-dsr-lecture">Лекция 11 (23.12.2024)</a></p>
   <p><a href="lec-12.html" class="js-dsr-lecture">Лекция 12 (11.02.2025)</a></p>
   <p><a href="lec-13.html" class="js-dsr-lecture">Лекция 13 (18.02.2025)</a></p>
+  <p><a href="lec-14.html" class="js-dsr-lecture">Лекция 14 (04.03.2025)</a></p>
 </article>
 
