--- a/src/components/alg/alg-conspect/sp/pages/elem-sp13.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp13.html
@@ -45,6 +45,66 @@
   <div class="anchor" id="p1"></div>
   <h3>Бинарный поиск по ответу</h3>
 
+  <h4>Функции</h4>
+  <p>Функция — это зависимость одной переменной величины от другой, то есть взаимосвязь между величинами. Обозначается y = f(x).</p>
+
+  <p>За обозначением f(x) спрятана некоторая формула зависящая от x. Например:</p>
+  <code>f(x) = sin(x) + 5 * x² - x³.</code>
+
+  <p>Многомерная функция — это функция с более чем одним аргументом, причём все аргументы являются действительными переменными. Обозначается</p>
+  <code>y = f(x₁, x₂), y = g(x₁, x₂, x₃), y = ϕ(x₁, x₂, ..., xₙ).</code>
+
+  <h4>Кусочные функции</h4>
+  <p>Кусочная функция — это функция, части которой заданы на определённом промежутке.</p>
+
+  <p>Кусочно-заданная функция — функция одной переменной, определённая на множестве вещественных чисел, которая задана отдельной формулой (или другим способом задания функции) на каждом из интервалов, составляющих область её определения.</p>
+
+  <p>Чтобы построить график кусочной функции, нужно каждый кусочек функции построить на выделенном для него участке, не залезая на соседние.</p>
+
+  <h4>Пример</h4>
+  <code>y = 9, при 5 ≤ x</code>
+  <code>y = (x - 2)², при 2 ≤ x ≤ 5</code>
+  <code>0, при x ≤ 2</code>
+
+  <h4>Булевская функция</h4>
+  <p>Булева функция — это функция, которая возвращает результат логического выражения на основе логических переменных, которые могут принимать только два значения: истину (1) или ложь (0).</p>
+
+  <p>Рассмотрим в качестве примера функцию</p>
+  <code>f(x) = 0.25x + 3 * sin(x).</code>
+
+  <p>Зададим булевскую функцию:</p>
+  <code>g(f(x)) = 1, при f(x) > 2</code>
+  <code>g(f(x)) = 0, при f(x) ≤ 2</code>
+
+  <p>Построим график для функции f(x) = 0.25x + 3 * sin(x).</p>
+  <p>Выделим куски, где функция f(x) принимает значение больше 2 и меньше 2. Нарисуем функцию g(f(x)).</p>
+
+  <h4>Булевская спец. функция</h4>
+  <p>Для алгоритма бинарного поиска по ответу мы требуем специальных условий по булевской функции f(x):</p>
+  <ol>
+    <li>Функция монотонна. (переход из 0 в 1 или из 1 в 0, происходит один раз)</li>
+    <li>Мы можем выделить границы left, right при которых значения функции f(x)
+  будет разными f(left)! = f(right).</li>
+  </ol>
+
+  <h4>Бинарный поиск по ответу</h4>
+  <p>Бинарный поиск по ответу применяется, если:</p>
+  <ol>
+    <li>Ответ на задачу можно найти математически, но формулу необходимо долго и трудно выводить.</li>
+    <li>Мы можем построить булевскую специальную функцию.</li>
+    <li>Ответ на задачу будет находится в месте перехода.</li>
+  </ol>
+
+  <h4>Последовательность действий алгоритма</h4>
+  <ol>
+    <li>Определяем булевскую функцию, как именно она выглядит (примерный график);</li>
+    <li>Определяем границы области поиска, таким образом, чтобы в f(left) f(right) значения булевской функции были разные;</li>
+    <li>Находим середину области поиска;</li>
+    <li>Определяем значение булевской функции от значения mid.</li>
+    <li>В зависимости от результата сдвигаем, либо левую границу области поиска в середину, либо правую границу области поиска в середину;</li>
+    <li>Продолжаем выполнять движение границ области поиска до тех пор, пока границы не станут соседними значениями right - left > 1;</li>
+    <li>Делаем дополнительную проверку элементов после окончания цикла while. Ответ на задачу находится в одной из границ.</li>
+  </ol>
 </article>
 
 
@@ -147,7 +207,7 @@
   <p>Ваша задача найти такое минимальное натуральное число N, что N! содержит ровно Q нулей в конце своей десятичной записи. Как вам известно, N!=1⋅2⋅3⋅...⋅N. Например, 5!=120, 120 оканчивается на 1   ноль.</p>
 
   <h4>Входные данные</h4>
-  <p>На вход подается одно число Q. (0≤Q≤10⁸).</p>
+  <p>На вход подается одно число Q. (0 ≤ Q ≤ 10⁸).</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите «No solution», если такого N не существует, иначе выведите N.</p>
@@ -238,7 +298,7 @@
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Герой по имени Магина сражается с группой из n монстров с помощью легендарного топора, известного как Ярость Битвы. Каждый из монстров имеет ai очков здоровья. Каждым ударом топора Магина уменьшает здоровье того, кого он ударил, на p очков, при этом уменьшая здоровье всех остальных монстров на q очков. Монстр умирает, когда у него остается 0 или менее очков здоровья. Магина хочет при каждом ударе выбирать цель таким образом, чтобы убить всех монстров за минимальное количество ударов. Требуется определить это количество.</p>
+  <p>Герой по имени Магина сражается с группой из n монстров с помощью легендарного топора, известного как Ярость Битвы. Каждый из монстров имеет aᵢ очков здоровья. Каждым ударом топора Магина уменьшает здоровье того, кого он ударил, на p очков, при этом уменьшая здоровье всех остальных монстров на q очков. Монстр умирает, когда у него остается 0 или менее очков здоровья. Магина хочет при каждом ударе выбирать цель таким образом, чтобы убить всех монстров за минимальное количество ударов. Требуется определить это количество.</p>
 
   <h4>Входные данные</h4>
   <p>В первой строке содержатся три целых числа через пробел: n, p и q (1 ≤ n ≤ 200000, 1 ≤ q ≤ p ≤ 10⁹) — количество монстров, урон по цели и урон по всем остальным соответственно.</p>
@@ -261,6 +321,66 @@
 17 13 14
 </pre>
   <code>5</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Удар топором наносит точечный урон монстру по которому бьем и общий урон всем остальным монстрам. Разделим удар топором на две части - удар копьем это урон только одному монстру и удар мечем это урон всем остальным монстрам.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long p, q, l, r, mid, sum;
+  int n;
+  cin >> n >> p >> q;
+  vector&lt;long long&gt; A(n);
+  vector&lt;long long&gt; Buf(n);
+  for (int i = 0; i &lt; A.size(); i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  sort(A.begin(), A.end());
+  if (p == q && A[n - 1] % q != 0) {
+    cout &lt;&lt; A[n - 1] / q + 1;
+  } else if (p == q && A[n - 1] % q == 0) {
+    cout &lt;&lt; A[n - 1] / q;
+  } else {
+    l = 0, r = 1e9 + 1;
+    p = p - q;
+    while (r - l > 1) {
+      mid = (r + l) / 2;
+      sum = 0;
+      for (int i = 0; i &lt; n; i++) {
+        if (A[i] - mid * q > 0) {
+          Buf[i] = A[i] - mid * q;
+        } else {
+          Buf[i] = 0;
+        }
+      }
+      for (int i = 0; i &lt; n; i++) {
+        sum += Buf[i] / p;
+        if (Buf[i] % p != 0) {
+          sum++;
+        }
+      }
+      if (sum > mid) {
+        l = mid;
+      } else {
+        r = mid;
+      }
+    }
+
+    // вывод результата
+    cout &lt;&lt; r;
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -314,6 +434,67 @@ BSC
 1000000000000
 </pre>
   <code>200000000001</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string str;
+  cin >> str;
+  long long b, s, c;
+  cin >> b >> s >> c;
+  long long pb, ps, pc;
+  cin >> pb >> ps >> pc;
+  long long q;
+  cin >> q;
+
+  // решение
+  long long l = 0;
+  long long r = 1e14;
+  long long mid;
+  long long B = 0, S = 0, C = 0;
+  for (int i = 0; i &lt; str.size(); i++) {
+    if (str[i] == 'B') {
+      B++;
+    }
+    if (str[i] == 'S') {
+      S++;
+    }
+    if (str[i] == 'C') {
+      C++;
+    }
+  }
+
+  // бинарный поиск
+  while (r - l > 1) {
+    mid = (l + r) / 2;
+    long long sum_mid = 0;
+    if (B * mid > b) {
+      sum_mid += (B * mid - b) * pb;
+    }
+    if (S * mid > s) {
+      sum_mid += (S * mid - s) * ps;
+    }
+    if (C * mid > c) {
+      sum_mid += (C * mid - c) * pc;
+    }
+    if (sum_mid &lt;= q) {
+      l = mid;
+    } else {
+      r = mid;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; l;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -559,6 +740,96 @@ BSC
 2 2 2 2
 </pre>
   <code>3</code>
+
+  <details>
+    <summary>Решение с бинарным поиском</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long n;
+  cin >> n;
+  vector&lt;long long&gt; A(n);
+  long long max1 = 0;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+    max1 = max(max1, A[i]);
+  }
+
+  // решение
+  // бинарный поиск
+  long long left = max1;
+  long long right = 3 * max1;
+  long long mid = 0;
+  while (right - left > 1) {
+    mid = (left + right) / 2;
+    long long count = mid;
+
+    for (int i = 0; i &lt; n; i++) {
+      count -= (mid - A[i]);
+    }
+    if (count &lt;= 0) {
+      right = mid;
+    } else {
+      left = mid;
+    }
+  }
+  mid = left;
+  long long count = mid;
+
+  for (int i = 0; i &lt; n; i++) {
+    count -= (mid - A[i]);
+  }
+
+  // вывод результата
+  if (count &lt;= 0) {
+    cout &lt;&lt; left;
+  } else {
+    cout &lt;&lt; right;
+  }
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Решение без бинарного поиска</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  long long sum = 0, max1 = 0;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+    sum += A[i];
+    if (A[i] > max1) {
+      max1 = A[i];
+    }
+  }
+
+  // решение
+  int x = ceil(sum / (n - 1.0));
+
+  // вывод результата
+  if (x >= max1) {
+    cout &lt;&lt; x;
+  } else {
+    cout &lt;&lt; max1;
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -647,6 +918,43 @@ NO
 </pre>
   <p>В первом наборе входных данных Поликарп может заработать два изумруда следующим образом: создать один меч и одну лопату.</p>
   <p>Во втором наборе входных данных у Поликарпа нет алмазов, а значит, он не сможет ничего создать.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int t;
+  cin >> t;
+  while (t--) {
+    long long a, b;
+    cin >> a >> b;
+
+    // решение
+    long long left = 0;
+    long long right = a + b;
+    long long mid;
+
+    // бинарный поиск
+    while (right - left > 1) {
+      mid = (right + left) / 2;
+      if (a + b >= 3 * mid && a >= mid && b >= mid) {
+        left = mid;
+      } else {
+        right = mid;
+      }
+    }
+
+    // вывод результата
+    cout &lt;&lt; left &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
